--- a/GraphicEditor/Views/MainWindow.axaml
+++ b/GraphicEditor/Views/MainWindow.axaml
@@ -309,7 +309,7 @@
 						<StackPanel Grid.Row="1" Margin="0 20 0 0">
 							<TextBlock Text="Толщина" Margin="0 0 0 0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 							<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-								<Slider x:Name="thicknessSlider" Width="110" Minimum="1" Maximum="20" Value="1"/>
+								<Slider x:Name="thicknessSlider" Width="110" Minimum="1" Maximum="20" Value="{Binding CurrentThickness, Mode=TwoWay}"/>
 								<TextBlock x:Name="thicknessValueText" Text="1" Margin="10 0 0 0" VerticalAlignment="Center"/>
 							</StackPanel>
 						</StackPanel>
