--- a/GraphicEditor/Views/MainWindow.axaml
+++ b/GraphicEditor/Views/MainWindow.axaml
@@ -136,7 +136,7 @@
 						<MenuItem Header="_Сохранить" Command="{Binding SaveCommand}"/>
 						<MenuItem Header="_Сохранить как..." Command="{Binding SaveAsCommand}"/>
 						<Separator/>
-						<MenuItem Header="_Выйти"/>
+						<MenuItem Header="_Выйти" Command="{Binding ExitCommand}"/>
 					</MenuItem>
 					<MenuItem Header="_Справка">
 						<MenuItem Header="Помощь"/>
